tests/NormalTests/paczka1/fuzzy1/95845461.err
Error in line 11: A898 A314 79,4
Error in line 15: A898 A536 67,5
Error in line 8: y6ii8I A536 26,5
Error in line 18: 94m5yoSi0F S765 93,3
Error in line 25: 94m5yoSi0F A898 29,4
Error in line 26: 94m5yoSi0F A314 33,5
Error in line 16: DpBq A536 136,8
Error in line 28: 94m5yoSi0F A536 53,7
Error in line 32: 94m5yoSi0F S765 84,1
